scrollbar fix & optimize table dark

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -164,10 +164,10 @@ pre::-webkit-scrollbar, div::-webkit-scrollbar {
   width: 5px !important;
   height: 5px !important;
 }
-pre::-webkit-scrollbar-track, div::-webkit-scrollbar {
+pre::-webkit-scrollbar-track, div::-webkit-scrollbar-track {
   background: #ffffff00 !important;
 }
-pre::-webkit-scrollbar-thumb, div::-webkit-scrollbar {
+pre::-webkit-scrollbar-thumb, div::-webkit-scrollbar-thumb {
   background-color: #b8b8b880 !important;
 }
 
@@ -207,36 +207,37 @@ pre::-webkit-scrollbar-thumb, div::-webkit-scrollbar {
   @apply hidden;
 }
 
-.notion-page-icon {
-  /*@apply dark:fill-gray-200/50;*/
-  fill: rgb(229 231 235 / 0.5);
+.notion-table-header {
   @apply dark:text-gray-200/50;
 }
-
-.notion-table-header {
-  @apply dark:dark:text-gray-200;
-}
-.notion-table-header-inner {
-  /*@apply dark:border-y-gray-200/50;*/
-  border-top-color: rgb(229 231 235 / 0.5);
-  border-bottom-color: rgb(229 231 235 / 0.5);
-}
-.notion-table-view-header-cell-inner {
-  /*@apply dark:border-r-gray-200/50;*/
-  border-top-color: rgb(229 231 235 / 0.5);
-  border-bottom-color: rgb(229 231 235 / 0.5);
-  border-right-color: rgb(229 231 235 / 0.5);
-}
-.notion-collection-column-title-icon {
-  fill: rgb(229 231 235 / 0.5);
-  /*@apply dark:fill-gray-200/50;*/
-}
-.notion-table-row {
-  /*@apply dark:border-b-gray-200/50;*/
-  border-bottom-color: rgb(229 231 235 / 0.5);
-}
-.notion-table-cell {
-  padding: 2px 2px 3px;
-  /*@apply dark:border-r-gray-200/50;*/
-  border-right-color: rgb(229 231 235 / 0.5);
+@media (prefers-color-scheme:dark) {
+  .notion-page-icon {
+    /*@apply dark:fill-gray-200/50;*/
+    fill: rgb(229 231 235 / 0.5);
+    /*@apply dark:text-gray-200/50;*/
+  }
+  .notion-table-header-inner {
+    /*@apply dark:border-y-gray-200/50;*/
+    border-top-color: rgb(229 231 235 / 0.2);
+    border-bottom-color: rgb(229 231 235 / 0.2);
+  }
+  .notion-table-view-header-cell-inner {
+    /*@apply dark:border-r-gray-200/50;*/
+    border-top-color: rgb(229 231 235 / 0.2);
+    border-bottom-color: rgb(229 231 235 / 0.2);
+    border-right-color: rgb(229 231 235 / 0.2);
+  }
+  .notion-collection-column-title-icon {
+    fill: rgb(229 231 235 / 0.5);
+    /*@apply dark:fill-gray-200/50;*/
+  }
+  .notion-table-row {
+    /*@apply dark:border-b-gray-200/50;*/
+    border-bottom-color: rgb(229 231 235 / 0.2);
+  }
+  .notion-table-cell {
+    /*padding: 2px 2px 3px;*/
+    /*@apply dark:border-r-gray-200/50;*/
+    border-right-color: rgb(229 231 235 / 0.2);
+  }
 }
